--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         <activity
             android:name=".AddGarbageActivity"
             android:exported="true"/>
+        <activity
+            android:name=".CaldendarActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".InfoGarbageActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
